force-app/main/default/objects/BIP_Case_Junction__c/BIP_Case_Junction__c.object-meta.xml
<CustomObject>
    <label>BIP Case Junction</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>BIP Case Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BIP Case Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>