force-app/main/default/objects/BIP_Case_Junction__c/fields/BIP_PI__c.field-meta.xml
<CustomField>
    <fullName>BIP_PI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BIP PI</label>
    <referenceTo>BIP_PI__c</referenceTo>
    <relationshipLabel>BIP Case Junctions</relationshipLabel>
    <relationshipName>BIP_Case_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>