force-app/main/default/objects/BIP_Case_Junction__c/fields/BIP_Request__c.field-meta.xml
<CustomField>
    <fullName>BIP_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BIP Request</label>
    <referenceTo>BIP_Request__c</referenceTo>
    <relationshipLabel>BIP Case Junctions</relationshipLabel>
    <relationshipName>BIP_Case_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>