force-app/main/default/objects/BIP_Case_Junction__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <length>20</length>
    <referenceTo>Forrester_Case__x</referenceTo>
    <relationshipLabel>BIP Case Junctions</relationshipLabel>
    <relationshipName>BIP_Case_Junctions</relationshipName>
    <type>ExternalLookup</type>
</CustomField>