force-app/main/default/objects/BIP_Case_Junction__c/fields/Primary_PI__c.field-meta.xml
<CustomField>
    <fullName>Primary_PI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary PI</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BIP Case Junctions</relationshipLabel>
    <relationshipName>BIP_Case_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>